# ecommerce-analytics-kafka-stream

./: .env  docker-compose.yml  main.py  producer.py  pyproject.toml  requirements.txt  snowflake_consumer.py  stream_processor.py
