[project]
name = "ecom-analytics-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "kafka-python>=3.0.7",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "snowflake-connector-python>=4.6.0",
]
